--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,296 @@
 /* место для вашего кода */
+
+.header{
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 95px 50px;
+}
+
+.header__menu {
+  width: 100%;
+}
+
+.header__links-list{
+  display: flex;
+  gap: 32px;
+  font-weight: normal;
+  font-size: 18px;
+  list-style: circle;
+}
+
+.header__logo-image{
+  width: 152px;
+  height: 107px;
+}
+
+.header__links-list-item_no-bullit{
+  list-style: none;
+}
+
+.header__link_active{
+  text-decoration: none;
+}
+
+.address{
+  max-width: 265px;
+  font-style: normal;
+  line-height: 24.3px;
+}
+
+.header__address{
+  justify-self: end;
+  max-width: 240px;
+  font-weight: normal;
+  font-size: 18px;
+}
+
+.cover{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  min-height: 757px;
+  padding: 0 50px;
+  text-align: center;
+  background-image: url(../images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay{
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title{
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  min-width: 1000px;
+  margin-top: 165px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 100px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.aligned-text{
+  text-align: left;
+}
+
+.aligned-text_center{
+  margin-left: 20px;
+  text-align: center;
+}
+
+.aligned-text_right{
+  text-align: right;
+}
+
+.letter-spacing-extended{
+  letter-spacing: 0.3em;
+}
+
+.no-letter-spacing{
+  letter-spacing: 0;
+}
+
+.cover__description{
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 50px;
+}
+
+.cover__description-text{
+  flex: 1;
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-align: justify;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button{
+  position: relative;
+  z-index: 2;
+  border: 1px solid white;
+  padding: 12px 32px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.bet-button:hover{
+  color: black;
+  background-color: #fff;
+}
+
+.lots{
+  margin-bottom: 120px;
+}
+
+.lots__heading{
+  margin: 180px auto 27px 64px;
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.lots__card-list{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-bottom: 30px;
+  padding-left: 25px;
+  list-style: none;
+}
+
+.lots__card-list-item{
+  width: 334px;
+  min-height: 596px;
+}
+
+.card{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 48px 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card__title{
+  z-index: 1;
+  color: #fff;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: underline;
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+}
+
+.card__text{
+  z-index: 1;
+  color: #fff;
+}
+
+.card_type_film{
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book{
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture{
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card-link{
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.lots__look-more-link{
+  margin-left: 64px;
+}
+
+.about{
+  display: grid;
+  grid-template-columns: 334px auto;
+  margin: 0 24px 180px;
+}
+
+.about__logo{
+  display: flex;
+  place-self: start center;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  margin-top: 35px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.about__logo-image{
+  width: 148px;
+  height: 114px;
+}
+
+.about__column{
+  grid-column: 2/3;
+  padding-left: 24px;
+}
+
+.about__title{
+  margin-top: 136px;
+  margin-bottom: 100px;
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text{
+  max-width: 100%;
+  line-height: normal;
+}
+
+.footer{
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: minmax(180px, auto);
+  padding: 0 50px;
+}
+
+.footer_address{
+  justify-self: start;
+  font-size: 18px;
+}
+
+.footer__social-list{
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-list-item{
+  max-width: 48px;
+  max-height: 48px;
+}
+
+.footer__menu-list{
+  padding-right: 24px;
+  font-size: 18px;
+  text-align: center;
+  list-style: none;
+}
+
+.footer__menu-link_active{
+  text-decoration: none;
+}
